[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langsmith>=0.4.3",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]
